# cto

./: .gitignore  README.md  command.json  main.py  mock_device_config.json  noxfile.py  package.json  prop.json  pyproject.toml  requirements-dev.in  sitecustomize.py
adb_server/: __init__.py  config.py  exceptions.py  filesystem.py  host.py  mock_device.py  protocol.py  server.py  shell.py  transport.py
adb_server/streams/: __init__.py  base.py  logcat.py  shell.py  sync.py
cto/: __main__.py
docs/: DEVELOPMENT.md
examples/: basic_usage.py
server/: adb_protocol.py  command_sim.py  config.py  device_server.py  host_services.py  log.py  overlay_fs.py  props.py  sync_service.py  transport.py
server/discovery/: mdns.py
server/shell/: __init__.py  commands.py  redirection.py  repl.py
src/adb/: constants.js  handshake.js  packet.js
src/adb_overlay_server/: __main__.py  config.py  logging_setup.py  main.py  server.py
src/adb_overlay_server/data/: commands.json  prop.json
src/adb_overlay_server/data/overlay/: README.md
src/cto/: __init__.py  __main__.py  adb_session.py  cli.py  config.py  overlay.py  protocol.py  server.py  transport.py
test/: handshake.test.js  protocol.test.js
tests/protocol/: test_framing.py  test_handshake.py
