[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "cto"
version = "0.1.0"
description = "ADB simulator CLI scaffold with config loading and developer tooling"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "cto.new", email = "devnull@example.com" },
]
license = { text = "Proprietary" }
keywords = ["adb", "simulator", "cli", "typer", "config", "asyncio"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Framework :: AsyncIO",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
zeroconf = ["zeroconf>=0.132.2"]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
cto = "cto.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["cto"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
no_implicit_optional = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
mypy_path = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/cto"]
